--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   },
   "author": "A. Tykhomyrova",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  },
+  "devDependencies": {},
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   }
 }
